force-app/main/default/objects/Submission_Requirement__mdt/Submission_Requirement__mdt.object-meta.xml
<CustomObject>
    <label>Submission Requirement</label>
    <pluralLabel>Submission Requirements</pluralLabel>
</CustomObject>