force-app/main/default/objects/Submission_Requirement__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>