force-app/main/default/objects/Submission_Requirement__mdt/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Text</type>
    <length>255</length>
</CustomField>