force-app/main/default/objects/Submission_Requirement__mdt/fields/Missing_Message__c.field-meta.xml
<CustomField>
    <fullName>Missing_Message__c</fullName>
    <label>Missing Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>