force-app/main/default/objects/Submission_Requirement__mdt/fields/Required_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Required_Field_API_Name__c</fullName>
    <label>Required Field API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>