force-app/main/default/objects/Submission_Requirement__mdt/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Text</type>
    <length>50</length>
</CustomField>