force-app/main/default/objects/Submission_Requirement__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Text</type>
    <length>50</length>
</CustomField>